# commander

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
agent/: Cargo.toml  Dockerfile
agent/src/: client.rs  k8scommands.rs  main.rs
commander/: Cargo.toml  Dockerfile
commander/src/: commander_state.rs  connection_map.rs  http_server.rs  main.rs  server.rs
docs/: exchanged-messages.md  usecase.md
e2e/: manifest.yaml
hoplite/: main.rs
kubernetes-client/: Cargo.toml
kubernetes-client/src/: lib.rs
messages/: Cargo.toml  build.rs
messages/src/: definitions.rs  generic_payload.rs  lib.rs  messages.rs  payload_serializer.rs
proto/: messages.proto
server/src/: main.rs
