[package]
name = "kubernetes-client"
version = "0.1.0"
edition = "2021"

[dependencies]
k8s-openapi = { version = "0.23.0", features = ["latest"] }
kube = { version = "0.95.0", features = ["runtime", "derive"] }
messages = { path = "../messages" }
serde_json = "1.0.121"
serde = { version = "1.0.204", features = ["derive"] }
